--- a/ConsoleApp1/Properties/launchSettings.json
+++ b/ConsoleApp1/Properties/launchSettings.json
@@ -2,6 +2,9 @@
   "profiles": {
     "ConsoleApp1": {
       "commandName": "Project"
+    },
+    "Docker": {
+      "commandName": "Docker"
     }
   }
 }
